--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,10 @@ name = "pypi"
 django = "*"
 mysqlclient = "*"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
